@@ -20,6 +20,15 @@ name|java
 operator|.
 name|io
 operator|.
+name|EOFException
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|IOException
 import|;
 end_import
@@ -70,6 +79,15 @@ operator|.
 name|util
 operator|.
 name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Random
 import|;
 end_import
 begin_import
@@ -962,6 +980,162 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|testShouldThrowEOFException
+specifier|public
+name|void
+name|testShouldThrowEOFException
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|Random
+name|random
+init|=
+name|random
+argument_list|()
+decl_stmt|;
+try|try
+init|(
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+init|)
+block|{
+specifier|final
+name|int
+name|len
+init|=
+literal|16
+operator|+
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|2048
+argument_list|)
+operator|/
+literal|16
+operator|*
+literal|16
+decl_stmt|;
+specifier|final
+name|byte
+index|[]
+name|bytes
+init|=
+operator|new
+name|byte
+index|[
+name|len
+index|]
+decl_stmt|;
+try|try
+init|(
+name|IndexOutput
+name|os
+init|=
+name|dir
+operator|.
+name|createOutput
+argument_list|(
+literal|"foo"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+init|)
+block|{
+name|os
+operator|.
+name|writeBytes
+argument_list|(
+name|bytes
+argument_list|,
+name|bytes
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+init|(
+name|IndexInput
+name|is
+init|=
+name|dir
+operator|.
+name|openInput
+argument_list|(
+literal|"foo"
+argument_list|,
+name|newIOContext
+argument_list|(
+name|random
+argument_list|)
+argument_list|)
+init|)
+block|{
+try|try
+block|{
+name|is
+operator|.
+name|seek
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+comment|// Here, I go past EOF.
+name|is
+operator|.
+name|seek
+argument_list|(
+name|len
+operator|+
+name|random
+argument_list|()
+operator|.
+name|nextInt
+argument_list|(
+literal|2048
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// since EOF is not enforced by the previous call in RAMInputStream
+comment|// this call to readBytes should throw the exception.
+name|is
+operator|.
+name|readBytes
+argument_list|(
+name|bytes
+argument_list|,
+literal|0
+argument_list|,
+literal|16
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Did not get EOFException"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|EOFException
+name|eof
+parameter_list|)
+block|{
+comment|// expected!
+block|}
+block|}
+block|}
 block|}
 block|}
 end_class
